--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
         
     </div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
+    <script type="text/javascript" src="./three.js"></script>
     <script src="../dev/index.js"></script>
 </body>
 
