--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <script type="text/javascript" src="./three.js"></script>
-    <script src="../dev/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
