--- a/example/image/index.html
+++ b/example/image/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>panorama</title>
     <style>
-        body{
+        *{
             margin:0;
+            padding: 0;
         }
     </style>
 </head>
